file-selector: Allow to activate via double click
This helps in non-touch situations

Signed-off-by: Guido Günther <agx@sigxcpu.org>

--- a/src/dir-view.ui
+++ b/src/dir-view.ui
@@ -17,6 +17,7 @@
                   <object class="GtkGridView" id="grid_view">
                     <property name="factory">item_factory</property>
                     <property name="model">single_selection</property>
+                    <signal name="activate" handler="on_activate" swapped="true"/>
                   </object>
                 </property>
               </object>
