file-selector: Allow to sort by different fields
For now we support display name and modification time

Signed-off-by: Guido Günther <agx@sigxcpu.org>

--- a/src/file-selector.ui
+++ b/src/file-selector.ui
@@ -225,6 +225,18 @@
       </section>
       <section>
         <item>
+          <attribute name="label" translatable="yes">Last changed</attribute>
+          <attribute name="action">file-selector.sort</attribute>
+          <attribute name="target" type="(sb)">('modified',true)</attribute>
+        </item>
+        <item>
+          <attribute name="label" translatable="yes">First changed</attribute>
+          <attribute name="action">file-selector.sort</attribute>
+          <attribute name="target" type="(sb)">('modified',false)</attribute>
+        </item>
+      </section>
+      <section>
+        <item>
           <attribute name="label" translatable="yes">Show _Hidden Files</attribute>
           <attribute name="action">file-selector.show-hidden-files</attribute>
         </item>
