file-selector: Show full folder path as tooltip
Signed-off-by: Guido Günther <agx@sigxcpu.org>

--- a/src/file-selector.ui
+++ b/src/file-selector.ui
@@ -144,6 +144,11 @@
                             <lookup name="current-folder">PfsFileSelector</lookup>
                           </closure>
                         </binding>
+                        <binding name="tooltip-text">
+                          <closure type="gchararray" function="folder_to_tooltip">
+                            <lookup name="current-folder">PfsFileSelector</lookup>
+                          </closure>
+                        </binding>
                         <property name="ellipsize">end</property>
                       </object>
                     </child>
