places-box: Add path bar
We split the current folder into components and switch into the selected
dir if the user selects a component.

Signed-off-by: Guido Günther <agx@sigxcpu.org>

--- a/src/file-selector.ui
+++ b/src/file-selector.ui
@@ -87,6 +87,7 @@
                 //<property name="propagate-natural-height">True</property>
                 <child>
                   <object class="PfsPlacesBox" id="places_box">
+                    <property name="folder" bind-source="PfsFileSelector" bind-property="current-folder" bind-flags="sync-create"/>
                     <signal name="new-uri" handler="on_new_uri" swapped="true"/>
                   </object>
                 </child>
