file-selector: Add a bit of margin
This ensures the selection doesn't look glued to the screen edge on
mobile.

Signed-off-by: Guido Günther <agx@sigxcpu.org>

--- a/src/file-selector.ui
+++ b/src/file-selector.ui
@@ -67,6 +67,8 @@
               <object class="PfsDirView" id="dir_view">
                 <property name="directories-only" bind-source="PfsFileSelector" bind-property="directory" bind-flags="sync-create"/>
                 <property name="folder" bind-source="PfsFileSelector" bind-property="current-folder" bind-flags="sync-create"/>
+                <property name="margin-start">6</property>
+                <property name="margin-end">6</property>
                 <signal name="new-uri" handler="on_new_uri" swapped="true"/>
                 <signal name="new-filename" handler="on_new_filename" swapped="true"/>
               </object>
