window: Fix title
Signed-off-by: Guido Günther <agx@sigxcpu.org>

--- a/src/demo-window.ui
+++ b/src/demo-window.ui
@@ -3,7 +3,7 @@
   <requires lib="gtk" version="4.0"/>
   <requires lib="Adw" version="1.0"/>
   <template class="PfsDemoWindow" parent="AdwApplicationWindow">
-    <property name="title" translatable="yes">Pfs</property>
+    <property name="title" translatable="yes">Phosh File Selector Demo</property>
     <property name="default-width">800</property>
     <property name="default-height">600</property>
     <property name="content">
