file-selector: Remember sort mode
Store sort mode in GSetting. That way the user doesn't have to
select the preferred sort mode ever so often.

Closes: https://gitlab.gnome.org/guidog/pfs/-/issues/1

Signed-off-by: Guido Günther <agx@sigxcpu.org>

--- a/src/file-selector.ui
+++ b/src/file-selector.ui
@@ -235,12 +235,12 @@
         <item>
           <attribute name="label" translatable="yes">Last changed</attribute>
           <attribute name="action">file-selector.sort</attribute>
-          <attribute name="target" type="(sb)">('modified',true)</attribute>
+          <attribute name="target" type="(sb)">('mtime',true)</attribute>
         </item>
         <item>
           <attribute name="label" translatable="yes">First changed</attribute>
           <attribute name="action">file-selector.sort</attribute>
-          <attribute name="target" type="(sb)">('modified',false)</attribute>
+          <attribute name="target" type="(sb)">('mtime',false)</attribute>
         </item>
       </section>
       <section>
