--- a/src/grid-item.ui
+++ b/src/grid-item.ui
@@ -16,6 +16,7 @@
                 <property name="hexpand">True</property>
                 <property name="valign">center</property>
                 <property name="vexpand">True</property>
+                <property name="pixel-size" bind-source="PfsGridItem" bind-property="icon-size" bind-flags="sync-create"/>
                 <accessibility>
                   <relation name="labelled-by">label</relation>
                 </accessibility>
