dir-view: Use thumbnails when available
When another process already generated thumbnails we can pick them up.

We add a GSetting so it can be disabled. We use an enum for that as it
will gain more values once we create thumbnails as well.

Helps: https://gitlab.gnome.org/guidog/pfs/-/issues/6

Signed-off-by: Guido Günther <agx@sigxcpu.org>

--- a/src/dir-view.ui
+++ b/src/dir-view.ui
@@ -43,7 +43,7 @@
   </template>
 
   <object class="GtkDirectoryList" id="directory_list">
-    <property name="attributes">standard::display-name,standard::icon,standard::content-type,time::modified</property>
+    <property name="attributes">standard::display-name,standard::icon,standard::content-type,time::modified,thumbnail::*</property>
   </object>
   <object class="GtkFilterListModel" id="type_filtered_list">
     <property name="model">directory_list</property>
