--- a/src/grid-item.ui
+++ b/src/grid-item.ui
@@ -17,6 +17,7 @@
                 <property name="valign">center</property>
                 <property name="vexpand">True</property>
                 <property name="pixel-size" bind-source="PfsGridItem" bind-property="icon-size" bind-flags="sync-create"/>
+                <property name="icon-name">image-loading</property>
                 <accessibility>
                   <relation name="labelled-by">label</relation>
                 </accessibility>
