--- a/src/file-selector.ui
+++ b/src/file-selector.ui
@@ -99,6 +99,9 @@
           <object class="GtkBox">
             <property name="orientation">vertical</property>
             <child>
+              <object class="AdwClamp">
+                <property name="maximum-size">360</property>
+                <property name="child">
               <object class="GtkCenterBox">
                 <binding name="visible">
                   <closure type="gboolean" function="mode_to_filename_entry">
@@ -106,9 +109,19 @@
                   </closure>
                 </binding>
                 <property name="height-request">46</property>
+                <property name="start-widget">
+                  <object class="GtkLabel">
+                    <property name="label" translatable="yes">Name</property>
+                    <property name="halign">end</property>
+                    <property name="hexpand">True</property>
+                    <property name="margin-start">6</property>
+                    <property name="margin-end">6</property>
+                  </object>
+                </property>
                 <property name="center-widget">
                   <object class="GtkEntry">
                     <property name="valign">center</property>
+                    <property name="hexpand">True</property>
                     <property name="buffer">
                       <object class="GtkEntryBuffer" id="filename_buffer">
                         <property name="text" bind-source="PfsFileSelector" bind-property="filename"
@@ -116,6 +129,8 @@
                       </object>
                     </property>
                   </object>
+                </property>
+              </object>
                 </property>
               </object>
             </child>
