selector: Add search bar
This allows for type to search in "File open" mode.

The empty state icon is taken from nautilus.

Closes: https://gitlab.gnome.org/guidog/pfs/-/issues/12

Signed-off-by: Guido Günther <agx@sigxcpu.org>

--- a/src/dir-view.ui
+++ b/src/dir-view.ui
@@ -29,8 +29,16 @@
             <property name="name">empty</property>
             <property name="child">
               <object class="AdwStatusPage">
-                <property name="icon-name">folder-symbolic</property>
-                <property name="title" translatable="yes">Folder is empty</property>
+                <binding name="icon-name">
+                  <closure type="gchararray" function="searching_to_status_page_icon">
+                    <lookup name="display-mode">PfsDirView</lookup>
+                  </closure>
+                </binding>
+                <binding name="title">
+                  <closure type="gchararray" function="searching_to_status_page_title">
+                    <lookup name="display-mode">PfsDirView</lookup>
+                  </closure>
+                </binding>
                 <style>
                   <class name="compact"/>
                 </style>
