--- a/src/file-selector.ui
+++ b/src/file-selector.ui
@@ -135,6 +135,19 @@
               </object>
             </child>
             <child>
+              <object class="GtkSearchBar" id="search_bar">
+                <property name="key-capture-widget">PfsFileSelector</property>
+                <property name="child">
+                  <object class="GtkSearchEntry" id="search_entry">
+                    <property name="input-hints">no-emoji</property>
+                    <property name="input-purpose">terminal</property>
+                    <property name="placeholder-text" translatable="yes">Filename</property>
+                    <signal name="search-changed" handler="on_search_changed" swapped="true"/>
+                  </object>
+                </property>
+              </object>
+            </child>
+            <child>
               <object class="GtkCenterBox">
                 <property name="height-request">46</property>
                 <property name="start-widget">
