file-selector: Add a style class
This allows us to specifically select children

Signed-off-by: Guido Günther <agx@sigxcpu.org>

--- a/src/file-selector.ui
+++ b/src/file-selector.ui
@@ -244,6 +244,9 @@
       </object>
     </property>
     <signal name="close-request" handler="on_close_requested" swapped="true"/>
+    <style>
+      <class name="pfs-file-selector"/>
+    </style>
   </template>
   <interface>
     <menu id="dir_view_menu">
